# api-getaway

./: .gitignore  alembic.ini  config.py  knowledge_base.py  main.py  pyproject.toml  schema.py  text_response.py  todo.txt
app/: main.py
app/api/v1/admin/: routers.py
app/api/v1/client/: routers.py
app/api/v1/payment/: routers.py
app/core/: config.py
app/db/: base.py  session.py
app/db/model/: ai_model.py  client.py  log.py  payment.py
app/schemas/: admin.py  ai_model.py  client.py  payment.py
app/services/: admin.py  client.py
app/services/mail/templates/: billing_paid.html  invoice.html  verify_billing.html
app/services/mail/utils/: renders.py  sender.py
app/utils/: calculators.py  generators.py  knowledge_base.py  text_response.py
database/: sqlite.db
migrations/: env.py
migrations/versions/: e41542291130_initial_migration.py
model/: db.py
routers/: admin_router.py  billing_router.py  completions_router.py
schema/: schemas.py
templates/: invoice.html  receipt.html
utils/: auth_dependencies.py  billing.py  config_dependencies.py  dependencies.py
